--- a/index.html
+++ b/index.html
@@ -1,6 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="PETBOT – High Quality PET, PP & PC Bottles" />
+<meta property="og:description" content="Eco-friendly and durable PET, PP, and PC bottles for all packaging needs." />
+<meta property="og:image" content="./home_page/logo/petbot_logo.png" />
+<meta property="og:url" content="https://yourwebsite.com" />
+<meta name="twitter:card" content="summary_large_image" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- ✅ Fixed Meta Description -->
+    <meta name="description" content="Buy high-quality PET, PP, and PC bottles and containers for water and packaging. Eco-friendly, durable, and available in various sizes.">
+
+    <!-- ✅ Improved Title -->
+    <title>PETBOT – High Quality PET, PP & PC Bottles | Eco-Friendly Packaging</title>
+
+    <!-- ✅ Add Favicon -->
+    <link rel="icon" type="image/png" href="./home_page/logo/petbot_logo.png" />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="./home_page/style.css">
+    <link rel="stylesheet" href="./gallery/gallery.css">
+    <link rel="stylesheet" href="./fabrication/fabrication.css">
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <style>
+      #photo {
+        width: 100%;
+        max-width: 480px;
+        margin-bottom: 20px;
+        transition: transform 0.3s ease;
+      }
+      .petbot-arrow:hover {
+        transform: rotate(-45deg);
+      }
+    </style>
+  </head>
+  <body>
+
     <meta charset="UTF-8" />
     <meta name=<meta name="description" content="Buy high-quality PET, PP, and PC bottles and containers for water and packaging. Eco-friendly, durable, and available in various sizes.">
  />
